requirements updated, index page improved

--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,6 +1,20 @@
+ <!--credits: https://codepen.io/rauldronca/pen/oYbXyZ-->
+{% load static %}
 <html>
-<header><title>This is title</title></header>
+<head><title>This is title</title>
+    <link href="{% static 'css/index.css' %}" rel="stylesheet">
+</head>
 <body>
-Hello world
-</body>
+<h1>
+    <span>P</span>
+    <span>o</span>
+    <span>l</span>
+    <span>i</span>
+    <span>t</span>
+    <span>o</span>
+    <span>o</span>
+    <span>n</span>
+    <span>s</span>
+    <span>!</span>
+</h1></body>
 </html>
