alltoons, thistoon added

--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -1,4 +1,4 @@
- <!--credits: https://codepen.io/rauldronca/pen/oYbXyZ-->
+<!--credits: https://codepen.io/rauldronca/pen/oYbXyZ-->
 {% load static %}
 <html>
 <head><title>This is title</title>
@@ -16,5 +16,10 @@
     <span>n</span>
     <span>s</span>
     <span>!</span>
-</h1></body>
+</h1>
+
+<form>
+    <button class="button" style="vertical-align:middle" formaction="all/"><span>Go</span></button>
+</form>
+</body>
 </html>
