--- a/myapp/static/css/index.css
+++ b/myapp/static/css/index.css
@@ -58,3 +58,43 @@ h1 span:nth-child(11) { animation-delay: .10s; }
                  0 50px 25px rgba(0, 0, 0, .2);
   }
 }
+
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #FF8080;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 10px;
+  width: 100px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 25px;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
